--- a/styles.css
+++ b/styles.css
@@ -1,8 +1,8 @@
-
 * {
     padding:0;
     margin:0;
-    font-family: sans-serif;
+    font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+    text-decoration: none;
 }
 ::-webkit-scrollbar {
     width:8px;
@@ -19,49 +19,54 @@ nav {
     width: 100%;
     height: 53px;
     background: rgb(250,250,250);
+    border-bottom: 2px solid #DBDBDB; 
 }
 .logo {
     font-size: 2.5em;
     padding-left: 0.25em;
     
 }
+nav pre {
+    display: inline-block;
+    position: absolute;
+    top:30%
+}
+
 nav ul {
     display: inline;
     float: right;
     padding-right: 1%;
-    padding-top: 1em;
+    padding-top: 10px;
 }
 nav ul li {
- color:beige;
+ color:rgb(96,96,96);
  list-style-type: none;
  display: inline;
  padding: 5px;
 
 }
+.github {
+     background: url(img/001.png);
+}
+.linkedin {
+     background: url(img/000.png);
+}
+.hackerrank {
+     background: url(img/002.png);
 
-a:link {
-    color: red;
-    text-decoration: none;
-  }
-  
-  /* visited link */
-  a:visited {
-    color: rgb(96,96,96);
-    text-decoration: none;
-  }
-  
-  /* mouse over link */
-  a:hover {
-    color: hotpink;
-    text-decoration: none;
-  }
-  
-  /* selected link */
-  a:active {
-    color: blue;
-    text-decoration: none;
-  }
-
+}
+.codewars {
+     background: url(img/003.png);
+}
+.linkedin, .hackerrank,
+.github, .codewars {
+     width: 30px;
+     height: 30px;
+     background-position: center; 
+     background-repeat: no-repeat; 
+     background-size: cover; 
+     display: inline-block;   
+     }
  /*---------main content--------*/ 
 main {
     width: 50%;
@@ -70,6 +75,11 @@ main {
 }
 main p {
     text-align: left;
+    padding-bottom: 10px;
+}
+
+hr {
+    margin: 10px;
 }
 
 /*---------footer----------------*/
@@ -83,5 +93,21 @@ footer pre {
 @media(max-width: 500px){
     main {
         width: 90%;
+    }
+    .linkedin, .hackerrank,
+     .github, .codewars {
+        width: 20px;
+        height: 20px;
+    }
+    nav ul{
+        padding-top: 14px;
+    }
+    nav ul li{
+        padding: 2px;
+    }
+    .logo {
+        font-size: 2em;
+        padding-left: 0.25em;
+        
     }
 }
